--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
         <section class="links hero-overlay">
             <h2>Kursöversikt</h2>
             <ul>
-                <li><a href="del-1-datid-nutid-framtid/content/index.html">Kurs 1: Dåtid och nutid</a></li>
-                <li><a href="del-2-ai-ekosystem/content/index.html">Kurs 2: AI-ekosystem</a></li>
-                <li><a href="del-3-generativ-ai/content/index.html">Kurs 3: Generativ AI</a></li>
-                <li><a href="del-4-optimera-gen-ai-prestanda/content/index.html">Kurs 4: Optimera egen AI-prestanda</a></li>
-                <li><a href="del-5-providers-applications/content/index.html">Kurs 5: Providers-applications (engelska)</a></li>
+                <li><a href="del-1-datid-nutid-framtid/content/index.html">Del 1: Dåtid och nutid</a></li>
+                <li><a href="del-2-ai-ekosystem/content/index.html">Del 2: AI-ekosystem</a></li>
+                <li><a href="del-3-generativ-ai/content/index.html">Del 3: Generativ AI</a></li>
+                <li><a href="del-4-optimera-gen-ai-prestanda/content/index.html">Del 4: Optimera egen AI-prestanda</a></li>
+                <li><a href="del-5-providers-applications/content/index.html">Del 5: Providers-applications (engelska)</a></li>
                 <!-- Lägg till fler länkar vid behov -->
             </ul>
         </section>
@@ -33,4 +33,5 @@
         <p>&copy; 2025 AI-eLearning</p>
     </footer>
 </body>
+
 </html>
