--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
         <section class="links hero-overlay">
             <h2>Kursöversikt</h2>
             <ul>
-                <li><a href="del-1-datid-nutid-framtid/content/index.html">Del 1: Dåtid och nutid</a></li>
-                <li><a href="del-2-ai-ekosystem/content/index.html">Del 2: AI-ekosystem</a></li>
+                <li><a href="https://filedn.eu/loiaPiuvJeNhb8pAG35F7R0/AI-eLearning/SV/Del-1/#/">Del 1: Tillämpningar, lagen och historik</a></li>
+                <li><a href="https://filedn.eu/loiaPiuvJeNhb8pAG35F7R0/AI-eLearning/SV/Del-2/#/">Del 2: Typer av AI och Bias</a></li>
                 <li><a href="del-3-generativ-ai/content/index.html">Del 3: Generativ AI</a></li>
-                <li><a href="del-4-optimera-gen-ai-prestanda/content/index.html">Del 4: Optimera egen AI-prestanda</a></li>
-                <li><a href="del-5-providers-applications/content/index.html">Del 5: Providers-applications (engelska)</a></li>
+                <li><a href="https://filedn.eu/loiaPiuvJeNhb8pAG35F7R0/AI-eLearning/SV/Del-4/#/">Del 4: LLM i fokus</a></li>
+                <li><a href="https://filedn.eu/loiaPiuvJeNhb8pAG35F7R0/AI-eLearning/SV/Del-5/#/">Del 5: Optimera Gen AI-prestanda</a></li>
+                <li><a href="https://filedn.eu/loiaPiuvJeNhb8pAG35F7R0/AI-eLearning/SV/Del-6/#/">Del 6: Optimera Gen AI-prestanda</a></li>
                 <!-- Lägg till fler länkar vid behov -->
             </ul>
         </section>
@@ -35,3 +36,4 @@
 </body>
 
 </html>
+
