--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <ul>
                 <li><a href="https://filedn.eu/loiaPiuvJeNhb8pAG35F7R0/AI-eLearning/SV/Del-1/#/">Del 1: Tillämpningar, lagen och historik</a></li>
                 <li><a href="https://filedn.eu/loiaPiuvJeNhb8pAG35F7R0/AI-eLearning/SV/Del-2/#/">Del 2: Typer av AI och Bias</a></li>
-                <li><a href="del-3-generativ-ai/content/index.html">Del 3: Generativ AI</a></li>
+                <li><a href="./del-2-ai-ekosystem/content/index.html">Del 3: AI-ekosystem</a></li>
                 <li><a href="https://filedn.eu/loiaPiuvJeNhb8pAG35F7R0/AI-eLearning/SV/Del-4/#/">Del 4: LLM i fokus</a></li>
                 <li><a href="https://filedn.eu/loiaPiuvJeNhb8pAG35F7R0/AI-eLearning/SV/Del-5/#/">Del 5: Optimera Gen AI-prestanda</a></li>
                 <li><a href="https://filedn.eu/loiaPiuvJeNhb8pAG35F7R0/AI-eLearning/SV/Del-6/#/">Del 6: Optimera Gen AI-prestanda</a></li>
@@ -36,4 +36,5 @@
 </body>
 
 </html>
+
 
